--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+body {
+  font-family: "Geomanist-Regular" !important;
+  font-style: normal;
+  font-weight: normal;
+  position: absolute;
+  height: 100%;
+  max-width: 480px;
+  margin: 0px auto 0px auto !important;
+  left: 0;
+  right: 0;
+  box-shadow: 0 0 8px 0 rgba(37, 40, 43, 0.1);
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.title-header {
+  font-family: "Geomanist-Regular";
+  font-size: 16px;
+  font-weight: 500;
+  text-align: left;
+  color: #ffffff;
+  width: 85%;
+  align-self: center;
+}
+
+.tab-categories {
+  padding: 8px 20px 8px 20px;
+}
+
+.load-more {
+  color: #008ecc;
+  cursor: pointer;
+}
+
+
+.container {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  color: white;
 }
